feat(auth): add email field and user update endpoint